src/main/java/com/example/lab23/Task/errors/TaskNotFoundException.java
package com.example.lab23.Task.errors;

import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ResponseStatus;

@ResponseStatus(code = HttpStatus.NOT_FOUND, reason = "User Not Found")
public class TaskNotFoundException extends RuntimeException {
    public TaskNotFoundException(Long id) {
        super("Task with id (" + id + ") wasn't found");
    }
}